--- a/src/styles/_hero.scss
+++ b/src/styles/_hero.scss
@@ -11,7 +11,7 @@
     align-items: flex-start;
 
     &__content {
-        max-width: 140px;
+        max-width: 175px;
         text-align: center;
         margin-left: 50px;
         display: flex;
@@ -32,14 +32,15 @@
 
         .title--small {
             margin-bottom: 12px;
-            font-size: 8px;
-            line-height: 12px;
+            font-size: 13px;
+            line-height: 18px;
+            white-space: nowrap;
         }
 
         p {
             margin-bottom: 1px;
-            font-size: 6px;
-            line-height: 10px;
+            font-size: 9px;
+            line-height: 13px;
 
             &:last-child {
                 margin-top: 20px;
@@ -47,11 +48,15 @@
             }
         }
 
+        .link-text {
+            font-size: 10px;
+        }
+
         &__combos {
             display: flex;
             justify-content: space-between;
-            gap: 32px;
-            margin-top: 4px;
+            gap: 20px;
+            margin-top: 12px;
             margin-bottom: 4px;
 
             &__combo {
@@ -60,7 +65,6 @@
               flex-direction: column;
               align-items: center;
               text-align: center;
-            //   background-color: red;
 
               img {
                 max-height: 40px;
@@ -68,16 +72,18 @@
               }
 
               button {
-                display : block;
-                width: 130%;
-                height: 25px;
+                display: inline-block;
+                width: auto;
+                height: auto;
+                padding: 6px 20px;
                 margin-bottom: 8px;
-                font-size: 8px;
+                font-size: 10px;
                 color: variaveis.$corTextoSecundario;
                 background-color: #6421ff;
                 border-radius: 4px;
-                margin-top: 2vw;
-                // margin-bottom: 8px;
+                border: none;
+                cursor: pointer;
+                white-space: nowrap;
               }
               
               .text {
@@ -87,9 +93,9 @@
         }
 
         .text {
-            font-size: 7px;
+            font-size: 10px;
             margin-top: 1px;
-            line-height: 10px;
+            line-height: 13px;
             display: block;
         }
     }
