--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -1,5 +1,7 @@
 @use 'hero';
+@use 'shows';
 @use 'variaveis';
+@use 'plans';
 
 @font-face {
     font-family: Avenir;
@@ -18,12 +20,12 @@
     margin: 0;
     padding: 0;
     box-sizing: border-box;
+    font-family: Avenir, sans-serif;
 }
 
 
 body{
-    background-color: variaveis.$corDeFundo;
-    font-family: Avenir, sans-serif;
+    background-color: variaveis.$corDeFundo;    
 }
 
 @mixin text($font-size: 16px) {
@@ -50,7 +52,7 @@ body{
 }
 
 .title--big {
-    @include title(44px);
+    @include title(32px);
 }
 
 .title {
@@ -65,4 +67,18 @@ body{
     @include text(8px);
     color: variaveis.$corTextoSecundario;
     text-decoration: underline;
+}
+
+.button {
+    display: inline-block;
+    width: auto;
+    padding: 8px 24px;
+    height: auto;
+    margin-bottom: 8px;
+    font-size: 14px;
+    color: variaveis.$corTextoSecundario;
+    background-color: #6421ff;
+    border-radius: 4px;
+    border: none;
+    cursor: pointer;
 }
